@@ -1,5 +1,5 @@
 // L2TPNS Global Stuff
-// $Id: l2tpns.h,v 1.82 2005-08-10 11:25:56 bodea Exp $
+// $Id: l2tpns.h,v 1.83 2005-08-17 03:56:27 bodea Exp $
 
 #ifndef __L2TPNS_H__
 #define __L2TPNS_H__
@@ -15,7 +15,7 @@
 #include <sys/types.h>
 #include <libcli.h>
 
-#define VERSION	"2.1.2"
+#define VERSION	"2.1.3"
 
 // Limits
 #define MAXTUNNEL	500		// could be up to 65535
